@@ -1,5 +1,4 @@
 // $Id$
-// FUZZ: disable check_for_tchar
 
 // ************************************************
 // ** This file is NOT to be used for framework. **
@@ -14,12 +13,12 @@ extern BOOL InitInstance (HINSTANCE, int);
 extern void InitSetup();
 
 
-int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, LPWSTR lpCmdLine, int nCmdShow)
+int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance, ACE_TCHAR* lpCmdLine, int nCmdShow)
 {
     MSG msg;
     HACCEL hAccelTable;
     if (!InitInstance (hInstance, nCmdShow)) return FALSE;
-    hAccelTable = LoadAccelerators(hInstance, (LPCTSTR)IDC_FACE);
+    hAccelTable = LoadAccelerators(hInstance, (const ACE_TCHAR*)IDC_FACE);
     InitSetup();
     while (GetMessage(&msg, NULL, 0, 0)) {
         if (!TranslateAccelerator(msg.hwnd, hAccelTable, &msg)) {
